2003-01-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-emacs.el (process-node): Abolished.

	* mi-gauche.el (process-node): Abolished.

2002-09-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-util.el (mode-info-obarray, mode-info-method-obarray): Use 0
	instead of nil as the initial value for the new obarray.

2002-08-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.3.

	* mi-index.el (mode-info-make-index): Fix the bug that misses
	candidate titles.

2002-07-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.2.
	(mode-info-class-alist): Add guile and scheme.

	* mi-index.el (make-index-file): When Emacs is running without
	interactive terminal, do not load a generated index.
	(write-index-file): Call `save-buffer' instead of `write-region'
	in order to make a backup.

	* mi-scheme.el, mi-guile.el: New file.

	* mi-gauche.el: Reimplemented.

	* mi-fontify.el (mode-info-fontify-keywords): Relaxed.
	(retry-japanese-node-name): New advice.

2002-07-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.1.
	(mode-info-class-alist): Add `gauche'.
	(mode-info-available-classes): New internal variable.
	(mode-info-read-class-name): Refer the above.

	* mi-index.el (mode-info-make-all-indices): Refer
	`mode-info-available-classes'.
	(mode-info-index-node-regexp): New constant.
	(make-index-file): Refer the above.
	(mode-info-index-entry-regexp): Relaxed.

	* mi-gauche.el: New file.

2002-07-22  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-index.el (mode-info-dump-symbols): Write `indexer-version'.

	* mode-info.el (mode-info-indexer-version): New macro.
	(load-index): Set `indexer-version'.

	* mi-config.el (mode-info-key-or-menu-binding): Export to
	mi-util.el.

	* mi-util.el (mode-info-key-or-menu-binding): Import from
	mi-config.el.

2002-07-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.1.
